--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,10 +6,10 @@ name: CI
 # events but only for the dev branch
 on:
   push:
-    branches: [dev, master, 'feat/**']
+    branches: [dev, master, 'feat/**', 'fix/ci']
   pull_request:
     branches: [dev, master]
-
+ 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   bootstrap:
@@ -31,11 +31,11 @@ jobs:
             /home/runner/.cache/Cypress
             ~/.cache/yarn
             **/node_modules
-          key: ${{ runner.os }}-v2.2-build-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-v2.3-build-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-v2.2-build-
-            ${{ runner.os }}-v2.2-build-
-            ${{ runner.os }}-v2.2-
+            ${{ runner.os }}-v2.3-build-
+            ${{ runner.os }}-v2.3-build-
+            ${{ runner.os }}-v2.3-
       - name: Install dependencies
         run: | 
           yarn && yarn build:only
